magicblock-config-macro/tests/fixtures/fail_merge_enum.stderr
error: no default declared
 --> tests/fixtures/fail_merge_enum.rs:3:10
  |
3 | #[derive(Default, Mergeable)]
  |          ^^^^^^^
  |
  = help: make a unit variant default by placing `#[default]` above it
  = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Merge can only be derived for structs
 --> tests/fixtures/fail_merge_enum.rs:4:1
  |
4 | / enum TestEnum {
5 | |     A(u32),
6 | |     B(String),
7 | | }
  | |_^
