magicblock-config-macro/tests/fixtures/fail_merge_enum.rs
use magicblock_config_macro::Mergeable;

#[derive(Default, Mergeable)]
enum TestEnum {
    A(u32),
    B(String),
}

fn main() {}
